--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">BLOG-first</a>
+    <a class="navbar-brand" href="/">BLOG-first</a>
     <button
       class="navbar-toggler"
       type="button"
@@ -15,12 +15,12 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" href="/">Home</a>
         </li>
+        <% if (locals.user) { %>
         <li class="nav-item">
           <a class="nav-link" href="#">Add-Blog</a>
         </li>
-
         <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle"
@@ -29,19 +29,27 @@
             data-bs-toggle="dropdown"
             aria-expanded="false"
           >
-            XYZ
+            gyaneshwar
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">logout</a></li>
+            <li><a class="dropdown-item" href="/user/logout">logout</a></li>
           </ul>
         </li>
+        <% } else{ %>
+        <li class="nav-item">
+          <a class="nav-link" href="/user/signup">Create Account</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/user/signin">Signin</a>
+        </li>
+        <% } %>
       </ul>
     </div>
   </div>
 </nav>
 
 <% if (locals.error) { %>
-<div class="container">
+<div class="container mt-4">
   <div class="alert alert-danger" role="alert"><%= locals.error %></div>
 </div>
 
