--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,7 +5,18 @@
     <title>Homepage</title>
   </head>
   <body>
-    <%- include('./partials/navbar') %> <%= JSON.stringify(user) %><%-
-    include('./partials/scripts') %>
+    <div class="container mt-3">
+      <% blogs.forEach(blog => { %>
+      <div class="card" style="width: 18rem">
+        <img src="<%= blog.coverImageUrl %>" class="card-img-top" alt="..." />
+        <div class="card-body">
+          <h5 class="card-title"><%= blog.title %></h5>
+          <a href="<%= %>" class="btn btn-primary">View</a>
+        </div>
+      </div>
+      <% }) %>
+    </div>
+
+    <%- include('./partials/scripts') %>
   </body>
 </html>
