--- a/views/addblog.ejs
+++ b/views/addblog.ejs
@@ -2,40 +2,39 @@
 <html lang="en">
   <head>
     <%- include('./partials/head') %>
-    <title>Homepage</title>
+    <title>Add New Blog</title>
   </head>
   <body>
-    <%- include('./partials/navbar') %>
-    <div class="container">
+    <%- include('./partials/nav') %>
+
+    <div class="container mt-3">
       <form action="/blog" method="post" enctype="multipart/form-data">
-        <div class="mt-3">
-          <div class="mb-3">
-            <label for="coverImage" class="form-label">coverImage</label>
-            <input
-              type="file"
-              class="form-control"
-              id="coverImage"
-              name="coverImage"
-              aria-describedby="coverImage"
-            />
-          </div>
-          <div class="mb-3">
-            <label for="title" class="form-label">Title</label>
-            <input
-              type="text"
-              class="form-control"
-              id="title"
-              name="title"
-              aria-describedby="emailHelp"
-            />
-          </div>
-          <div class="mb-3">
-            <label for="body">Body </label>
-            <textarea name="body" class="form-control" id="body"></textarea>
-          </div>
-          <div class="mb-3">
-            <button class="btn btn-primary" type="submit">Submit</button>
-          </div>
+        <div class="mb-3">
+          <label for="coverImage" class="form-label">Cover Image</label>
+          <input
+            type="file"
+            class="form-control"
+            id="coverImage"
+            name="coverImage"
+            aria-describedby="coverImage"
+          />
+        </div>
+        <div class="mb-3">
+          <label for="title" class="form-label">Title</label>
+          <input
+            type="text"
+            class="form-control"
+            id="title"
+            name="title"
+            aria-describedby="title"
+          />
+        </div>
+        <div class="mb-3">
+          <label for="body">Body</label>
+          <textarea name="body" class="form-control" id="body"></textarea>
+        </div>
+        <div class="mb-3">
+          <button class="btn btn-primary">Submit</button>
         </div>
       </form>
     </div>
