--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,6 +1,9 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
+<nav
+  class="navbar navbar-expand-lg bg-body-tertiary bg-dark"
+  data-bs-theme="dark"
+>
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">BLOG-first</a>
+    <a class="navbar-brand" href="#">Blogify</a>
     <button
       class="navbar-toggler"
       type="button"
@@ -15,11 +18,11 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/">Home</a>
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
         <% if (locals.user) { %>
         <li class="nav-item">
-          <a class="nav-link" href="/blog/add-new">Add-Blog</a>
+          <a class="nav-link" href="/blog/add-new">Add Blog</a>
         </li>
         <li class="nav-item dropdown">
           <a
@@ -29,13 +32,13 @@
             data-bs-toggle="dropdown"
             aria-expanded="false"
           >
-            gyaneshwar
+            Piyush Garg
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="/user/logout">logout</a></li>
+            <li><a class="dropdown-item" href="/user/logout">Logout</a></li>
           </ul>
         </li>
-        <% } else{ %>
+        <% } else {%>
         <li class="nav-item">
           <a class="nav-link" href="/user/signup">Create Account</a>
         </li>
@@ -52,5 +55,4 @@
 <div class="container mt-4">
   <div class="alert alert-danger" role="alert"><%= locals.error %></div>
 </div>
-
 <% } %>
