--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -2,12 +2,13 @@
 <html lang="en">
   <head>
     <%- include('./partials/head') %>
-    <title>Signup</title>
+    <title>Signin</title>
   </head>
   <body>
-    <%- include('./partials/navbar') %>
+    <%- include('./partials/nav') %>
+
     <div class="container mt-4">
-      <form action="/user/signin" method="POST">
+      <form action="/user/signin" method="post">
         <div class="mb-3">
           <label for="exampleInputEmail1" class="form-label"
             >Email address</label
@@ -19,12 +20,15 @@
             id="exampleInputEmail1"
             aria-describedby="emailHelp"
           />
+          <div id="emailHelp" class="form-text">
+            We'll never share your email with anyone else.
+          </div>
         </div>
         <div class="mb-3">
           <label for="exampleInputPassword1" class="form-label">Password</label>
           <input
-            type="password"
             name="password"
+            type="password"
             class="form-control"
             id="exampleInputPassword1"
           />
