--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -5,16 +5,17 @@
     <title>Signup</title>
   </head>
   <body>
-    <%- include('./partials/navbar') %>
+    <%- include('./partials/nav') %>
+
     <div class="container mt-4">
-      <form action="/user/signup" method="POST">
+      <form action="/user/signup" method="post">
         <div class="mb-3">
-          <label for="fullName" class="form-label">Full-Name</label>
+          <label for="fullName" class="form-label">Full Name</label>
           <input
             type="text"
-            name="fullName"
             class="form-control"
             id="fullName"
+            name="fullName"
             aria-describedby="fullName"
           />
         </div>
@@ -29,12 +30,15 @@
             id="exampleInputEmail1"
             aria-describedby="emailHelp"
           />
+          <div id="emailHelp" class="form-text">
+            We'll never share your email with anyone else.
+          </div>
         </div>
         <div class="mb-3">
           <label for="exampleInputPassword1" class="form-label">Password</label>
           <input
-            type="password"
             name="password"
+            type="password"
             class="form-control"
             id="exampleInputPassword1"
           />
@@ -43,6 +47,7 @@
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
     </div>
+
     <%- include('./partials/scripts') %>
   </body>
 </html>
